--- a/trips/static/trips/css/star-rating.css
+++ b/trips/static/trips/css/star-rating.css
@@ -13,7 +13,7 @@
     display: inline-block;
     font-size: 1.5rem;
     font-family: FontAwesome;
-    content: "\f006";
+    content: "\f005";
     margin: 0;
     padding: 0.3rem 0.2rem;
     cursor: pointer;
@@ -29,6 +29,7 @@
 
 /*******Click and hover ********/
 
+.star-rating i,
 input:checked ~ label, label:hover ~ label {
     color: #ffb503;
 }
