Calculated average star rating and displayed it on the page, added style

--- a/trips/static/trips/css/star-rating.css
+++ b/trips/static/trips/css/star-rating.css
@@ -29,6 +29,7 @@
 
 /*******Click and hover ********/
 
+.fa-star,
 .star-rating i,
 input:checked ~ label, label:hover ~ label {
     color: #ffb503;
