--- a/templates/base.html
+++ b/templates/base.html
@@ -58,11 +58,11 @@
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             {% if user.is_authenticated %}
-                                {% if userprofile.profile_img %}
-                                <img src="{{ userprofile.profile_img.url }}" alt="Profile Picture"
+                                {% if request.user.userprofile.profile_img %}
+                                <img src="{{ request.user.userprofile.profile_img.url }}" alt="Profile Picture"
                                 class="img-fluid img-thumbnail rounded-circle d-block">
                                 {% else %}
-                                 <img src="{{ 'user_profile/default_user.png' }}" alt="Default Profile Image"
+                                <img src="{{ 'media/user_profile/default_user.png' }}" alt="Default Profile Image"
                                 class="img-fluid img-thumbnail rounded-circle d-block">
                                 {% endif %}
                             {% else %}
