--- a/templates/base.html
+++ b/templates/base.html
@@ -46,13 +46,13 @@
     <header class="container-fluid fixed-top">
         <!--Logo-->
         <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
-            <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+            <div class="col-12 col-lg-4">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
                     <h2 class="logo-front text-white my-0"><strong class='brand-logo'>Discover</strong> Malta</h2>
                 </a>
             </div>
             <!--Profile-->
-            <div class="col-12 col-lg-2 offset-lg-6 my-auto py-1 py-lg-0">
+            <div class="col-12 col-lg-4 menu-icons-div">
                 <ul class="list-inline list-unstyled text-lg-right my-0">
                     <li class="nav-item dropdown list-inline-item">
                         <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdownMenuLink"
