--- a/templates/includes/mobile-nav.html
+++ b/templates/includes/mobile-nav.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="mobile-icon-menu">
     <!--access to the account menu-->
     <li class="nav-item dropdown list-inline-item nav-item">
         <a class="nav-link dropdown-toggle text-white d-block d-lg-none" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
