Removed the top margin from the section and carousel div

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,120 +4,125 @@
 {% block extra_title %} Home {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <!---carousel-->
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="https://cdn.pixabay.com/photo/2017/05/20/21/03/catamaran-2329770_1280.jpg" class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://cdn.pixabay.com/photo/2016/01/14/11/50/gozo-1139812_1280.jpg" class="d-block w-100 carousel-img" alt="gozo island">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="https://cdn.pixabay.com/photo/2021/01/24/19/41/boats-5946304_1280.jpg" class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
+<section class="main-content">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <!---carousel-->
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://cdn.pixabay.com/photo/2017/05/20/21/03/catamaran-2329770_1280.jpg"
+                                class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://cdn.pixabay.com/photo/2016/01/14/11/50/gozo-1139812_1280.jpg"
+                                class="d-block w-100 carousel-img" alt="gozo island">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://cdn.pixabay.com/photo/2021/01/24/19/41/boats-5946304_1280.jpg"
+                                class="d-block w-100 carousel-img" alt="marsaxlokk village in Malta">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--heading-->
-    <div class="row">
-        <div class="col-s12">
-            <h1 class="text-center">Discover Malta</h1>
-            <p class="text-center">Malta is an archipelago in the central Mediterranean between Sicily and
-                the North African coast. It's a nation known for historic sites related to a
-                succession of rulers including the Romans, Moors, Knights of Saint John,
-                French and British. It has numerous fortresses, megalithic temples and the Ħal Saflieni
-                Hypogeum, a subterranean complex of halls and burial chambers dating to circa 4000 B.C.
-            </p>
+        <!--heading-->
+        <div class="row spacing">
+            <div class="col-s12">
+                <h1 class="text-center">Discover Malta</h1>
+                <p class="text-center">Malta is an archipelago in the central Mediterranean between Sicily and
+                    the North African coast. It's a nation known for historic sites related to a
+                    succession of rulers including the Romans, Moors, Knights of Saint John,
+                    French and British. It has numerous fortresses, megalithic temples and the Ħal Saflieni
+                    Hypogeum, a subterranean complex of halls and burial chambers dating to circa 4000 B.C.
+                </p>
+            </div>
         </div>
-    </div>
-    <!--Testimony-->
-    <div class="row">
-        <div class="col">
-            <h2 class="text-center">Plan your dream vacation in one place</h2>
-            <p class="text-center">
-                We want to make sure you have the best, hustle free time in Malta! Here you can book all your
-                antennary on one platform and ensure you do not miss out on anything you want to do when you arrive:
-            </p>
+        <!--Testimony-->
+        <div class="row">
+            <div class="col">
+                <h2 class="text-center">Plan your dream vacation in one place</h2>
+                <p class="text-center">
+                    We want to make sure you have the best, hustle free time in Malta! Here you can book all your
+                    antennary on one platform and ensure you do not miss out on anything you want to do when you arrive:
+                </p>
+            </div>
         </div>
-    </div>
-    <!--Reasons for signing up-->
-    <div class="row testimony-div">	
-        <div class="card-info card-1 col-lg-2 col-md-4 col-sm-4">	
-            <div class="card-body text-center">	
-              <i class="fas fa-envelope-open-text"></i>	
-                <p>Instant Email Confirmation</p>	
-            </div>	
-        </div>	
-        <div class="card-info card-2 col-lg-2 col-md-4 col-sm-4">	
-            <div class="card-body text-center">	
-              <i class="fas fa-mobile-alt"></i>	
-                <p>Mobile Tickets</p>	
-            </div>	
-        </div>	
-        <div class="card-info card-3 col-lg-2 col-lg-2 col-md-4 col-sm-4">	
-            <div class="card-body text-center">	
-              <i class="fas fa-file-alt"></i>	
-                <p>Cancellation Policy</p>	
-            </div>	
-        </div>	
-        <div class="card-info card-4 col-lg-2 col-md-6 col-sm-4">	
-            <div class="card-body text-center">	
-              <i class="fab fa-cc-paypal"></i>	
-                <p>Fast ＆ Secure Online Payments</p>	
-            </div>	
-        </div>	
-        <div class="card-info card-5 col-lg-2 col-lg-2 col-md-6 col-sm-6 offset-sm-6">	
-            <div class="card-body text-center">	
-              <i class="fas fa-comment-dots"></i>	
-                <p>Rate ＆ Review Your Experience</p>	
-            </div>	
-        </div>	
-    </div>	
-   <div class="row">
-       <div class="col-12">
-        <p class="text-center">
-            So what are you waiting for?
-            <strong> Explore our amazing offers ＆ plan your dream vacation!</strong>
-        </p>
-       </div>
-   </div>
-</div>
-<!--Category Display-->
-<div class="row">
-    <div class="col">
-        <h3 class="text-center">Choose Your Category</h3>
-    </div>
-</div>
-<!--Display of Categories name and image with a link to category pages-->
-<div class="row category-div">
-    {% for category in categories %}
-    <div class="col-lg-3 col-md-4 col-sm-6 p-2">
-        <div class="card bg-dark h-100 m-1">
-            <a href="{{ category.get_url }}">
-                <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
-            </a>
-            <div class="card-img-overlay">
-                <a href="{{ category.get_url }}" class="category-link">
-                    <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}
-                    </h5>
-                </a>
+        <!--Reasons for signing up-->
+        <div class="row testimony-div">
+            <div class="card-info card-1 col-lg-2 col-md-4 col-sm-4">
+                <div class="card-body text-center">
+                    <i class="fas fa-envelope-open-text"></i>
+                    <p>Instant Email Confirmation</p>
+                </div>
+            </div>
+            <div class="card-info card-2 col-lg-2 col-md-4 col-sm-4">
+                <div class="card-body text-center">
+                    <i class="fas fa-mobile-alt"></i>
+                    <p>Mobile Tickets</p>
+                </div>
+            </div>
+            <div class="card-info card-3 col-lg-2 col-lg-2 col-md-4 col-sm-4">
+                <div class="card-body text-center">
+                    <i class="fas fa-file-alt"></i>
+                    <p>Cancellation Policy</p>
+                </div>
+            </div>
+            <div class="card-info card-4 col-lg-2 col-md-6 col-sm-4">
+                <div class="card-body text-center">
+                    <i class="fab fa-cc-stripe"></i>
+                    <p>Fast ＆ Secure Online Payments</p>
+                </div>
+            </div>
+            <div class="card-info card-5 col-lg-2 col-lg-2 col-md-6 col-sm-6 offset-sm-6">
+                <div class="card-body text-center">
+                    <i class="fas fa-comment-dots"></i>
+                    <p>Rate ＆ Review Your Experience</p>
+                </div>
+            </div>
+        </div>
+        <div class="row spacing">
+            <div class="col-12">
+                <p class="text-center">
+                    So what are you waiting for?
+                    <strong> Explore our amazing offers ＆ plan your dream vacation!</strong>
+                </p>
             </div>
         </div>
     </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <!--link to all trips page-->
-    <div class="col justify-content-center btn-div">
-        <a href="{% url 'trips' %}" class="btn btn-lg btn-next">View All Trips</a>
+    <!--Category Display-->
+    <div class="row spacing">
+        <div class="col">
+            <h3 class="text-center">Choose Your Category</h3>
+        </div>
     </div>
-</div>
-</div>
+    <!--Display of Categories name and image with a link to category pages-->
+    <div class="row category-div spacing">
+        {% for category in categories %}
+        <div class="col-lg-3 col-md-4 col-sm-6 p-2">
+            <div class="card bg-dark h-100 m-1">
+                <a href="{{ category.get_url }}">
+                    <img src="{{ category.cat_image.url }}" class="card-img" alt="{{ category.category_name }}">
+                </a>
+                <div class="card-img-overlay">
+                    <a href="{{ category.get_url }}" class="category-link">
+                        <h5 class="card-title text-center category-heading">{{ category.category_name | capfirst }}
+                        </h5>
+                    </a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+    <div class="row">
+        <!--link to all trips page-->
+        <div class="col justify-content-center btn-div">
+            <a href="{% url 'trips' %}" class="btn btn-lg btn-next">View All Trips</a>
+        </div>
+    </div>
+    </div>
+</section>
 {% endblock %}
 
 
