--- a/static/css/base.css
+++ b/static/css/base.css
@@ -146,7 +146,7 @@ a:active,
 }
 
 .carousel-inner {
-    margin-top: 5rem;
+    margin-top: 1.5rem;
 }
 
 .carousel-img {
@@ -194,7 +194,7 @@ a:active,
     margin: 2rem;
     padding: 1rem;
     width: 100%;
-    height: 230px;
+    height: auto;
     box-shadow: -3px 8px 27px -2px rgba(0, 0, 0, 0.51);
 }
 
@@ -258,7 +258,6 @@ a:active,
 }
 
 .main-content {
-    margin-top: 5rem;
     margin-bottom: 5rem;
     height: fit-content;
     flex: 1 0 auto;
