--- a/static/css/base.css
+++ b/static/css/base.css
@@ -293,6 +293,10 @@ a:active,
     -webkit-transition: ease-in-out all .2s;
 }
 
+.sort-div {
+    display: flex;
+    justify-content: end;
+}
 
 /* .btn-more {
     border-radius: 50%;
@@ -359,15 +363,23 @@ a:active,
     margin: 0px;
 }
 
-.results {
+/* .results {
     margin-bottom: 4rem;
-}
+} */
 
 .card-trip {
     height: 48rem;
     margin:  1rem;
     width: 21rem;
     border: 2px solid #000000;
+}
+
+.card-body p {
+    font-size: 1rem;
+}
+
+.card-body ul {
+    font-size: 1rem;
 }
 
 .card-trip img {
@@ -757,7 +769,9 @@ footer {
         left: 51% !important;
     }
 
-    
+    .sort-div {
+        display: block;
+    }
 
 }
 
@@ -776,6 +790,10 @@ footer {
 
     header {
         height: 15vh;
+    }
+
+    .sort-div {
+        display: block;
     }
 }
 
